Crash at invoking tooltips #80195

Closed
opened 2020-08-28 16:53:49 +02:00 by Ankit Meel · 9 comments
Member

System Information
Operating system: macOS Mojave
Graphics card: Intel HD 6000

Blender Version
see bisect below

Short description of error
Hover over any button which has tooltip and Blender crashes.
Randomly, it crashes even before the UI is loaded.

Thread 1: EXC_BAD_ACCESS (code=2, address=0x101c71980)
si	uiStringInfo *	0x101c71978	0x0000000101c71978
type	int	4
strinfo	unsigned char *	NULL	0x0000000000000000
*strinfo	unsigned char	

add48c0074 is the first bad commit
Author: @ideasman42
Date: Wed Aug 26 10:11:13 2020 +1000
Cleanup: use const variables in interface code

Exact steps for others to reproduce the error
Build and run, it should crash at startup.
If not, On splash screen, hover over the VFX button.

**System Information** Operating system: macOS Mojave Graphics card: Intel HD 6000 **Blender Version** see bisect below **Short description of error** Hover over any button which has tooltip and Blender crashes. Randomly, it crashes even before the UI is loaded. ``` Thread 1: EXC_BAD_ACCESS (code=2, address=0x101c71980) si uiStringInfo * 0x101c71978 0x0000000101c71978 type int 4 strinfo unsigned char * NULL 0x0000000000000000 *strinfo unsigned char ``` add48c007428419ca57a899331e79d934cb1799b is the first bad commit Author: @ideasman42 Date: Wed Aug 26 10:11:13 2020 +1000 Cleanup: use const variables in interface code **Exact steps for others to reproduce the error** Build and run, it should crash at startup. If not, On splash screen, hover over the VFX button.
Author
Member

Added subscribers: @ideasman42, @ankitm

Added subscribers: @ideasman42, @ankitm

Added subscriber: @mano-wii

Added subscriber: @mano-wii

I can't reproduce the problem.
add48c0074 is just Cleanup, and as far as I've seen it doesn't bring any functional change.
Are you sure that commit introduced the problem?

I can't reproduce the problem. add48c0074 is just Cleanup, and as far as I've seen it doesn't bring any functional change. Are you sure that commit introduced the problem?
Author
Member

Screenshot 2020-08-28 at 23.49.36.png
I just copied that bad commit text from Terminal.. I'll check again without ccache this time.

I can't reproduce the problem.

Do you have tooltips enabled ?

![Screenshot 2020-08-28 at 23.49.36.png](https://archive.blender.org/developer/F8817628/Screenshot_2020-08-28_at_23.49.36.png) I just copied that bad commit text from Terminal.. I'll check again without ccache this time. > I can't reproduce the problem. Do you have tooltips enabled ?
Author
Member

Oh I'm using lite build if it matters.
And I checked again.
working: 88ada5e218
broken : add48c0074

Oh I'm using lite build if it matters. And I checked again. working: https://git.blender.org/gitweb/gitweb.cgi/blender.git/commit/88ada5e218835f060a23cbe0f1f2da7452e81b07 broken : https://git.blender.org/gitweb/gitweb.cgi/blender.git/commit/add48c007428419ca57a899331e79d934cb1799b

This issue was referenced by 744eb1172e

This issue was referenced by 744eb1172e3ba16af21813de6c1e772490a68b91

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-08-28 22:10:15 +02:00

I can't reproduce the crash, but I detected a problem apparently related to that commit.
So it must be fixed now.

I can't reproduce the crash, but I detected a problem apparently related to that commit. So it must be fixed now.
Author
Member
Err.. you pushed a bad commit too! https://developer.blender.org/diffusion/B/history/master/ b78a439e9071
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#80195
No description provided.