Fix T80195: crash when invoking tooltips on MacOS

Problem introduced in rBadd48c007428.
`UI_but_string_info_get` can change the value of the args.